package eapli.base.surveymanagement.domain;

/**
 * Author: 1201180 - Guilherme Sencadas
 */
public enum QuestionType {
    FREE_TEXT,
    NUMERIC,
    SINGLE_CHOICE,
    SINGLE_CHOICE_WITH_INPUT_VALUE,
    MULTIPLE_CHOICE,
    MULTIPLE_CHOICE_WITH_INPUT_VALUE,
    SORTING,
    SCALING
}
